# project-euler

./: .editorconfig  .eslintrc.js  .gitattributes  .gitignore  .prettierignore  .prettierrc.js  CODEOWNERS  CONTRIBUTING.md  LICENSE  Makefile  README  README.md  eslint.config.mjs  package-lock.json  package.json  prettier.config.mjs  problem-00001.scala  problem-00006.scala  problem-00008.scala  problem-00009.scala  problem-00012.scala  problem-00018.scala  problem-00019.scala  problem-00020.scala  pyproject.toml  scripts.py  tsconfig.json
bash/: 1.sh  Makefile
c/: 1.c  Makefile
clojure/: 1.clj  107.clj  11.clj  12.clj  13.clj  14.clj  15.clj  16.clj  17.clj  18.clj  188.clj  19.clj  2.clj  20.clj  206.clj  21.clj  22.clj  3.clj  31.clj  37.clj  38.clj  39.clj  4.clj  41.clj  42.clj  5.clj  52.clj  53.clj  6.clj  69.clj  7.clj  70.clj  8.clj  9.clj  97.clj  Makefile
data/: primes.txt
docs/: _config.yml  index.md  problem-120.md  problem-15.md  problem-188.md  problem-24.md  problem-26.md  problem-27.md  problem-3.md  problem-67.md  problem-69.md  problem-70.md  problem69.md
gcc/: 1.c  Makefile
go/: 1.go  Makefile
golang/: Makefile
haskell/: 1.hs  10.hs  12.hs  15.hs  16.hs  17.hs  2.hs  20.hs  21.hs  29.hs  3.hs  4.hs  5.hs  6.hs  7.hs  9.hs  Makefile  problem-00001.hs  problem-00002.hs  problem-00003.hs  problem-00004.hs  problem-00005.hs  problem-00006.hs  problem-00007.hs  problem-00009.hs  problem-00010.hs  problem-00012.hs  problem-00014.hs  problem-00015.hs  problem-00017.hs  problem-00021.hs
j/: 1.ijs  Makefile
java/: Makefile  P40.java
javascript/: 1.js  14.js  19.js  3.js  4.js  5.js  Makefile
lua/: 1.lua  Dockerfile  Makefile
node/: Makefile
nodejs/: 1.js  Makefile
openjdk/: Makefile
pari/: 1.gp  Makefile
problems/: 14  15  20  6  67  9.txt  problem-00001.txt  problem-00005.txt  problem-00009.txt  problem-00011.txt  (+8 more)
(+754 files in other folders)
