[tool.poetry]
name = "project_euler"
version = "0.1.0"
description = "Problems and solutions for Project Euler"
authors = ["Min Huang <min.huang@alumni.usc.edu>"]
license = "MIT"
readme = "README.md"

[tool.poetry.scripts]
all = "scripts:run_all"
format = "scripts:run_format"
lint = "scripts:run_lint"
test = "scripts:run_tests"

[tool.poetry.dependencies]
python = "^3.13"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
isort = "^6.0.1"
pyright = "^1.1.397"
pytest = "^8.3.4"
ruff = "^0.9.10"

[tool.black]
line-length = 120

[tool.isort]
profile = "black"
force_sort_within_sections = true
lines_between_sections = 0
lines_after_imports = 2

[tool.ruff]
line-length = 120

[tool.pytest.ini_options]
python_files = "*.py"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
